Fix layout bug in chrome

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   justify-content: center;
   position: absolute;
   max-width: 300px;
-  height: 140px;
+  height: fit-content;
   top: 0;
   left: 0;
   right: 0;
